completed area page & fixed overflow problem

--- a/aboutUs.css
+++ b/aboutUs.css
@@ -14,6 +14,7 @@ body {
   width: 100%;
   height: 100%;
   border: 0px 0px 0px 0px;
+  overflow-x: hidden;
 }
 
 .aboutUs h1{
@@ -23,7 +24,9 @@ body {
   top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin: 0px;
+  font-family: "Satisfy", 'serif';
+  padding-bottom: 30px;
+  margin-bottom: 5px;
 }
 
 .aboutUs p {
@@ -33,7 +36,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin: 0px;
+  font-family: "Bree Serif", 'serif';
 }
 
 #cover {
@@ -51,7 +54,7 @@ body {
   overflow: hidden;
   animation: move 30s linear infinite;
   animation-name: move;
-  margin: 50px;
+  margin: 10px;
 }
 
 .moving-image img {
