--- a/area.css
+++ b/area.css
@@ -7,7 +7,7 @@
 }
 body{
     line-height: 1.5;
-    background-color: #ad926b;
+    background-color: #c9b393;
     color: #fff;
 }
 .cafe{
@@ -48,10 +48,13 @@ body{
     font-size: 2.6rem;
 }
 .cafe-head p{
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: 1.3rem;
+    font-weight: 250;
     padding: 1.8rem 0;
+    font-family: "Bree Serif", sans-serif;
+    color: #725529;
 }
+
 .cafe-btns{
     padding: 0.6rem 0;
     display: flex;
@@ -63,12 +66,15 @@ body{
     font-weight: 600;
     background: none;
     border: none;
-    color: #725529;
+    color: #483e2f;
     display: block;
     margin: 0 1rem;
     cursor: pointer;
     outline: 0;
     transition: opacity 0.4s ease-out;
+    font-family: "SilkScreen", sans-serif;
+
+    
 }
 .cafe-btn::after{
     content: "";
@@ -118,22 +124,29 @@ body{
     padding: 1rem;
 }
 .cafe-name{
-    font-family: var(--Inter);
-    color: #ad926b;
+    font-family: 'Bree Serif', serif;
+    color: #584b39;
     font-weight: 500;
     text-transform: capitalize;
-    padding: 0px 5px
+    padding: 0px 5px;
+    text-align: center;
+
 }
 .line{
-    width: 80%;
-    height: 3px;
-    background: #fbebd4;
+    width: 100%;
+    height: 2px;
+    background: #dac9b2;
 }
 
 .category{
-    padding-top: 0.2rem;
-    font-size: 1rem;
-    font-weight: 800;
+    padding: 0.2rem;
+    margin-left: 10px;
+    font-size: 0.9rem;
+    font-weight: 200;
+    text-align: center;
+    font-family: 'Bree Serif', serif;
+    color: #766c5f;
+
 }
 .category span{
     font-weight: 500;
@@ -273,23 +286,28 @@ body{
     color:#444;
     font-size: 2rem;
     padding: 10px;
+    font-family: 'Bree Serif', serif;
  }
  
  .cafe-popup .popup a{
     line-height: 1.5;
     font-size: 1.2rem;
-    color:#ad926b;
+    color:#888178;
     text-align: center;
+    font-family: 'Nanum Gothic', serif;
+    font-weight: 700;
  }
  
  .cafe-popup .popup a:hover{
-    color: #725529;
+    color: #4d463d;
  }
 
  .cafe-popup .popup .optime{
     text-align: center;
     font-size: 15px;
-    color:#777;
+    color:#aa748d;
+    font-family: 'Cardo', serif;
+    font-weight: 500;
     margin: 5px;
  }
 
